<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.journeyOS.liteweather.ui.weather.fragment.WeatherViewModel" />

        <variable
            name="viewModel"
            type="com.journeyOS.liteweather.ui.weather.fragment.WeatherViewModel" />

        <import type="com.journeyOS.liteframework.binding.viewadapter.recyclerview.LayoutManagers" />

        <import type="com.journeyOS.liteframework.binding.viewadapter.recyclerview.LineManagers" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:binding="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- 详细信息 -->
                <TextView
                    style="@style/section_title"
                    android:text="@string/weather_detail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_linearlayout"
                    android:orientation="horizontal"
                    android:paddingLeft="0dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="0dp"
                    android:showDividers="none">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <com.journeyOS.widget.weather.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:singleLine="true"
                            android:text="@{viewModel.nowEntity.temp}"
                            android:textColor="@color/text_primary"
                            android:textSize="52dp" />

                        <com.journeyOS.widget.weather.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:singleLine="true"
                            android:text="@{viewModel.cityEvent.adm1+viewModel.cityEvent.cityName}"
                            android:textColor="@color/text_primary"
                            android:textSize="14dp" />

                        <com.journeyOS.widget.weather.FontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:singleLine="true"
                            android:text="@{viewModel.nowEntity.text}"
                            android:textColor="@color/text_primary"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_apparent_temperature"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            binding:summary="@{viewModel.nowEntity.feelsLike}" />

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_humidity"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            binding:summary="@{viewModel.nowEntity.humidity}" />

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_visibility"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            binding:summary="@{viewModel.nowEntity.vis}" />

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_precipitation"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            app:showBottom="false"
                            binding:summary="@{viewModel.nowEntity.precip}" />

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:background="@color/divider" />

                <!-- 每日 -->
                <TextView
                    style="@style/section_title"
                    android:text="@string/weather_day" />

                <com.journeyOS.widget.weather.DailyForecastView
                    android:layout_width="match_parent"
                    android:layout_height="216dp"
                    android:layout_alignParentBottom="true"
                    binding:dailyData="@{viewModel.dailyDataList}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:background="@color/divider" />

                <!-- 每时 -->
                <TextView
                    style="@style/section_title"
                    android:text="@string/weather_hour" />

                <com.journeyOS.widget.weather.HourlyForecastView
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    binding:hourlyData="@{viewModel.hourlyDataList}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:layout_marginTop="0dp"
                    android:background="@color/divider" />

                <!-- 空气质量 -->
                <TextView
                    style="@style/section_title"
                    android:text="@string/weather_air_quality" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/divider_linearlayout"
                    android:orientation="horizontal"
                    android:paddingLeft="0dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="0dp"
                    android:showDividers="none">

                    <com.journeyOS.widget.weather.AqiView
                        android:id="@+id/aqi_view"
                        android:layout_width="140dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_vertical"
                        binding:aqiData="@{viewModel.aqiEntity}" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_air_pm25"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            binding:summary="@{viewModel.airNowEntity.pm2p5}" />

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_air_pm10"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            binding:summary="@{viewModel.airNowEntity.pm10}" />

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_air_so2"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            binding:summary="@{viewModel.airNowEntity.so2}" />

                        <com.journeyOS.widget.weather.WeatherTextView
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            app:bottomColor="@color/divider_secondary"
                            app:left="@string/weather_air_no2"
                            app:leftTextColor="@color/text_secondary"
                            app:leftTextSize="14dp"
                            app:rightTextColor="@color/text_primary"
                            app:rightTextSize="14dp"
                            app:showBottom="false"
                            binding:summary="@{viewModel.airNowEntity.no2}" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:background="@color/divider" />

                <!-- 太阳和风速 -->
                <TextView
                    style="@style/section_title"
                    android:text="@string/weather_sun_and_wind" />

                <com.journeyOS.widget.weather.AstroView
                    android:layout_width="match_parent"
                    android:layout_height="144dp"
                    binding:astroData="@{viewModel.astroEntity}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/divider_size"
                    android:background="@color/divider" />

                <TextView
                    style="@style/section_title"
                    android:text="@string/weather_life" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    binding:itemBinding="@{viewModel.itemBinding}"
                    binding:items="@{viewModel.observableList}"
                    binding:layoutManager="@{LayoutManagers.linear()}"
                    binding:lineManager="@{LineManagers.horizontal()}" />

                <View style="@style/suggestion_divider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:paddingBottom="50dp"
                    android:text="@string/weather_support"
                    android:textColor="@color/text_secondary"
                    android:textSize="12dp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</layout>